# RustStreamBench

./: .gitignore  TODO  get_inputs.sh  halstead.py  run.sh
bzip2/: Cargo.toml  get_inputs.sh  run_mpi.sh
bzip2/src/: main.rs  mpi.rs  pipeliner.rs  rayon.rs  rust_ssp.rs  sequential.rs  spar_rust.rs  spar_rust_mpi.rs  spar_rust_v2.rs  std_threads.rs  tokio.rs
eye-detector/: Cargo.toml  run_mpi.sh
eye-detector/src/: common.rs  main.rs  mpi.rs  par_better.rs  par_rust_spp.rs  par_rust_ssp.rs  par_std_threads.rs  par_tokio.rs  seq.rs  spar_rust.rs  spar_rust_mpi.rs  spar_rust_v2.rs
image-processing/: Cargo.toml  run_mpi.sh
image-processing/src/: main.rs  mpi.rs  pipeliner.rs  rayon.rs  rust_ssp.rs  sequential.rs  spar_rust.rs  spar_rust_mpi.rs  spar_rust_v2.rs  std_threads.rs  tokio.rs
libs/: setup_opencv_with_ffmpeg.sh
libs/rust-ssp/: Cargo.toml
libs/rust-ssp/src/blocks/: blocks.rs
libs/spar-rust/: Cargo.toml  LICENSE.md
libs/spar-rust/src/: codegen.rs  lib.rs  spar_stream.rs
logs/: .gitignore  plot.sh
micro-bench/: Cargo.toml  run_mpi.sh
micro-bench/src/: main.rs  mpi.rs  pipeliner.rs  rayon.rs  rust_ssp.rs  sequential.rs  spar_rust.rs  spar_rust_mpi.rs  spar_rust_v2.rs  std_threads.rs  tokio.rs
plots/: plot.py  plot_all.sh
plots/data/bzip2-compression/avi_video/: MPI-12  MPI-2  MPI-23  MPI-48  MPI-5  SEQUENTIAL  SPAR_RUST_MPI-11  SPAR_RUST_MPI-2  SPAR_RUST_MPI-24  SPAR_RUST_MPI-48  SPAR_RUST_MPI-6
plots/data/bzip2-compression/iso_file/: MPI-12  MPI-2  MPI-23  MPI-48  MPI-5  SEQUENTIAL  SPAR_RUST_MPI-11  SPAR_RUST_MPI-23  SPAR_RUST_MPI-3  SPAR_RUST_MPI-47  SPAR_RUST_MPI-5
plots/data/bzip2-compression/wiki_data/: MPI-12  MPI-2  MPI-23  MPI-47  MPI-6  SEQUENTIAL  SPAR_RUST_MPI-11  SPAR_RUST_MPI-23  SPAR_RUST_MPI-3  SPAR_RUST_MPI-47  SPAR_RUST_MPI-6
plots/data/bzip2-decompression/avi_video/: MPI-11  MPI-23  MPI-3  MPI-47  MPI-5  SEQUENTIAL  SPAR_RUST_MPI-11  SPAR_RUST_MPI-2  SPAR_RUST_MPI-23  SPAR_RUST_MPI-47  SPAR_RUST_MPI-5
plots/data/bzip2-decompression/iso_file/: MPI-12  MPI-23  MPI-47  MPI-6  SEQUENTIAL  SPAR_RUST_MPI-12  SPAR_RUST_MPI-23  SPAR_RUST_MPI-47  SPAR_RUST_MPI-5
plots/data/bzip2-decompression/wiki_data/: MPI-11  MPI-24  MPI-48  MPI-6  SEQUENTIAL  SPAR_RUST_MPI-12  SPAR_RUST_MPI-23  SPAR_RUST_MPI-48  SPAR_RUST_MPI-6
plots/data/eye-detector/: MPI-10  MPI-22  MPI-4  MPI-46  SEQUENTIAL  SPAR_RUST_MPI-10  SPAR_RUST_MPI-22  SPAR_RUST_MPI-4  SPAR_RUST_MPI-46
plots/data/image-processing/: MPI-11  MPI-21  MPI-46  MPI-6  SEQUENTIAL  SPAR_RUST_MPI-11  SPAR_RUST_MPI-21  SPAR_RUST_MPI-46  SPAR_RUST_MPI-6
plots/data/micro-bench/: MPI-11  MPI-23  MPI-3  MPI-47  MPI-5  SEQUENTIAL  SPAR_RUST_MPI-11  SPAR_RUST_MPI-23  SPAR_RUST_MPI-3  SPAR_RUST_MPI-47  SPAR_RUST_MPI-5
