[package]
name = "image-processing"
version = "0.1.0"
edition = "2021"
authors = ["Dalvan Griebler <dalvan.griebler@pucrs.br>",
		   "Júnior Löff <junior.loff@edu.pucrs.br>",
	   	   "Renato B. Hoffmann <renato.hoffmann@edu.pucrs.br>"]
license = "MIT"
repository = "https://github.com/GMAP/RustStreamBench"
readme = "README.md"

[dependencies]
# Core
raster = "0.2.0"

# Rust-SSP
rust-spp = { path = "../libs/rust-ssp" }

# Spar-Rust
spar-rust = { path = "../libs/spar-rust" }
spar-rust-v2 = { path = "../../spar-rust-v2" }
serde = { version = "1.0", default_features = false, features = [ "derive" ] }

# Rust Standard Library + Crossbeam
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"

# Tokio
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"
tokio-core = "0.1"

# Rayon
rayon = "1.10"

# Pipeliner
pipeliner = "1.0"

# Mpi
bincode = "1.3"

[features]
default = [ "multithreaded", "mpi" ]
multithreaded = []
mpi = []
