[package]
name = "micro-bench"
version = "0.1.0"
edition = "2021"
authors = ["Dalvan Griebler <dalvan.griebler@pucrs.br>",
		   "Júnior Löff <junior.loff@edu.pucrs.br>",
	   	   "Renato B. Hoffmann <renato.hoffmann@edu.pucrs.br>"]
license = "MIT"
repository = "https://github.com/GMAP/RustStreamBench"
readme = "README.md"

[dependencies]
# Rust-SSP
rust-spp = { path = "../libs/rust-ssp" }

# Spar-Rust
spar-rust = { path = "../libs/spar-rust" }
spar-rust-v2 = { path = "../../spar-rust-v2" }

# Rust Standard Library + Crossbeam
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"

# Tokio
tokio = { version = "1.26", features = ["full"] }
futures = "0.3"
tokio-core = "0.1"

# Rayon
rayon = "1.7"

# Pipeliner
pipeliner = "1.0.1"
